used the same meny bar

--- a/Register.html
+++ b/Register.html
@@ -12,7 +12,7 @@
 <title>Start Saving Lives </title>
 
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <div class="header-logo"><img src="./Images/logo.svg"></div>
             <div class="header-list">
@@ -24,7 +24,31 @@
                 </ul>
             </div>
         </nav>
+    </header> -->
+
+
+    <header>
+        <div id="logo">
+            <a href="index.html"><img src="./Images/logo.svg"></a>
+        </div>
+        <div id="nav">
+            <div class="header-list" id="headerl">
+                <!-- <i class="fa fa-times" onclick="hideMenu()"></i> -->
+                <ul>
+                    <li><a class="scroll" href="#about-us">About Us</a></li>
+                    <li><a class="scroll" href="#vol-sect">Volunteer</a></li>
+                    <li><a href="donate.html" target="_blank">Donate</a></li>
+                    <li><a href="login.html" target="_blank">Log In</a></li>
+                    <li><a href="signup.html" target="_blank">Sign Up</a></li>
+                    <li><a href="help.html" target="_blank">Get Help</a></li>
+                </ul>
+            </div>
+            <!-- <i class="fa fa-bars" onclick="showMenu()"></i> -->
+        </div>
     </header>
+
+
+
 
     <div class="inner">
         <!-- <div class="photo">
