not that much editing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a class="scroll" href="#vol-sect">Volunteer</a></li>
                     <li><a href="donate.html" target="_blank">Donate</a></li>
                     <li><a href="login.html" target="_blank">Log In</a></li>
-                    <li><a href="signup.html" target="_blank">Sign Up</a></li>
+                    <li><a href="Register.html" target="_blank">Sign Up</a></li>
                     <li><a href="help.html" target="_blank">Get Help</a></li>
                 </ul>
             </div>
